# cookiecutter-fastapi

./: README.md  cookiecutter.json
{{cookiecutter.repo_name}}/: Dockerfile  README.md  pyproject.toml
{{cookiecutter.repo_name}}/.github/workflows/: build.yaml  release.yaml  tests.yaml
{{cookiecutter.repo_name}}/tests/: conftest.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: __init__.py  main.py
